
	* Fix return error handling in ecore_file_download when
        ecore_con_url_get() fails.

2011-11-20 Vincent Torri

	* Ecore_Win32, Ecore_WinCE: fix Shift, Control and Alt keys
	detection
	* Ecore_Win32: fix "mouse-down inside and mouse-up outside" issue

2011-11-2  Carsten Haitzler (The Rasterman)

        * Fix bug ecore-evas for fb, buffer, sdl back-ends to ensure
        mouse is in on init (as events wont always give this) and focus
        is set on show if appropriate if no focus in/out events come
        from the back-end later
        * Fix setting override state to only hide if it should be
        visible at that point in x back end support

2011-11-24 Rafael Antognolli

        * Add ecore_fb_input_device_window_set().

2011-11-27 Vincent Torri

        * Fix and improve key management on Windows XP

2011-11-29 Vincent Torri

        * Discard left Ctrl when AltGr is pressed (Windows XP)
	* Fix the string value for the Delete key (Windows XP)
	* Fix the key release values for non keystroke keys (Windows XP)

2011-11-29 Mike McCormack

	* Allow quitting before entering the glib version of the main loop

2011-12-02 Carsten Haitzler (The Rasterman)

        1.1.0 release
        
2011-12-02 Mike Blumenkrantz

        * Use mempools for allocations

2011-12-02 Term <term@twistedpath.org>

        * added ecore_x_randr_output_backlight_available()

2011-12-03 Vincent Torri

	* Fix the modifiers value (Windows XP)

2011-12-04 Mike Blumenkrantz

        * added ecore_timer_reset()

2011-12-05 Mike Blumenkrantz

        * added ecore_con_socks api

2011-12-07 Mike Blumenkrantz

        * Allow SSL certificates to be loaded for STARTTLS
        * Added functions to set/get the hostname used for SSL certificate verification
        * ecore_con_ssl_server_cafile_add() now accepts directories

2011-12-10 Mike Blumenkrantz

        * Fix case where SSL certificates would not be used
        * Added ECORE_CON_REMOTE_CORK for applying TCP_CORK to sends